--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1000;
 }
 
 .navbar-links a {
@@ -119,6 +120,7 @@ body {
     letter-spacing: 3px;
     text-transform: uppercase;
     writing-mode: vertical-rl;
+    z-index: 1000;
 }
 
 .divider-right-main {
@@ -128,6 +130,7 @@ body {
     width: 2px;
     height: 30%;
     background-color: #00FFFF;
+    z-index: 1000;
 }
 
 .divider-left-main {
@@ -272,8 +275,8 @@ body {
 
 .tech-icons {
     margin-top: 50px;
-    width: 65%;
-    height: 60%;
+    width: 70vw;
+    height: 55%;
     position: relative;
     margin-left: 275px;
     top: 150px;
@@ -329,10 +332,143 @@ body {
 .contact-section {
     background-color: #191c32;
     height: 100vh;
+    position: relative;
 }
 
-.contact-header {
+.contact-section .divider {
+    width: 620px;
+}
+
+.contact-section p {
+    margin-top: 20px;
+    font-size: 20px;
+}
+
+.contact-form {
+    position: absolute;
+    top: 450px;
+    right: 200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1000px;
+    height: 600px;
+}
+
+.contact-icons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    font-size: 60px;
+    height: 500px;
+}
+
+.contact-icons span {
+    margin-left: 15px;
+    font-size: 15px;
+    background: #FFFFFF;
+    background: linear-gradient(to right, #FFFFFF 28%, #00FFFF 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    vertical-align: middle;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-self: center;
+    width: 550px;
+}
+
+.form input {
+    font-size: 15px;
+    margin: 15px 0;
+    padding: 20px 20px;
+    border: none;
+    background-color: transparent;
+    border-bottom: 1px solid #00FFFF;
+    color: #fff;
+}
+
+.form input::placeholder {
+    color: #FFFFFF;
+}
+
+.form textarea {
+    font-size: 15px;
+    padding: 10px 20px;
+    height: 150px;
+    margin-bottom: 15px;
+    border: 1px solid #00FFFF;
+    border-radius: 10px;
+    background-color: transparent;
+}
+
+.form textarea::placeholder {
+    color: #FFFFFF;
+}
+
+.contact-button {
+    position: absolute;
+    bottom: 0;
+    width: 200px;
+    padding: 20px;
+    border: none;
+    display: block;
+    text-align: center;
+    letter-spacing: 4px;
+    cursor: pointer;
+    text-transform: uppercase;
+    overflow: hidden;
+    color: #222222;
+    font-weight: 700;
+    font-size: 15px;
+    background-color: #FFFFFF;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.20);
+}
+
+.contact-button span {
     position: relative;
-    margin-left: 275px;
-    top: 150px;
+    z-index: 1000;
+}
+
+.contact-button:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 490%;
+    width: 140%;
+    background: #00FFFF;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .5s ease-in-out;
+    -webkit-transform: translateX(-98%) translateY(-25%) rotate(45deg);
+    transform: translateX(-98%) translateY(-25%) rotate(45deg);
+}
+
+.contact-button:hover:after {
+    -webkit-transform: translateX(-9%) translateY(-25%) rotate(45deg);
+    transform: translateX(-9%) translateY(-25%) rotate(45deg);
+}
+
+
+/* FOOTER  */
+
+.footer {
+    background-color: #191c32;
+    width: 100vw;
+    height: 0 auto;
+    position: relative;
+}
+
+.footer-content h5 {
+    position: absolute;
+    bottom: 30px;
+    right: 0;
+    width: 89%;
+    text-align: center;
+    color: #00FFFF;
+    letter-spacing: 4px;
+    font-weight: 400;
 }
